fix for header width blown out by fixed-width iframes on small screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -10,7 +10,7 @@
     justify-content: space-between;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 2;
 }
 .styleguide-home-link {
@@ -44,6 +44,7 @@
 
     .styleguide-site-header {
         position: static;
+        width: 100%;
     }
     .styleguide-home-link {
         font-size: 1.2rem;
